[master] Added all the folders.

--- a/Leetcode/Leetcode/Leetcode.csproj
+++ b/Leetcode/Leetcode/Leetcode.csproj
@@ -48,6 +48,234 @@
     <None Include="packages.config" />
     <None Include="Settings.StyleCop" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="000\000\001\" />
+    <Folder Include="000\000\002\" />
+    <Folder Include="000\000\003\" />
+    <Folder Include="000\000\004\" />
+    <Folder Include="000\000\005\" />
+    <Folder Include="000\000\006\" />
+    <Folder Include="000\000\007\" />
+    <Folder Include="000\000\008\" />
+    <Folder Include="000\000\009\" />
+    <Folder Include="000\010\010\" />
+    <Folder Include="000\010\011\" />
+    <Folder Include="000\010\012\" />
+    <Folder Include="000\010\013\" />
+    <Folder Include="000\010\014\" />
+    <Folder Include="000\010\015\" />
+    <Folder Include="000\010\016\" />
+    <Folder Include="000\010\017\" />
+    <Folder Include="000\010\018\" />
+    <Folder Include="000\010\019\" />
+    <Folder Include="000\020\020\" />
+    <Folder Include="000\020\021\" />
+    <Folder Include="000\020\022\" />
+    <Folder Include="000\020\023\" />
+    <Folder Include="000\020\024\" />
+    <Folder Include="000\020\025\" />
+    <Folder Include="000\020\026\" />
+    <Folder Include="000\020\027\" />
+    <Folder Include="000\020\028\" />
+    <Folder Include="000\020\029\" />
+    <Folder Include="000\030\030\" />
+    <Folder Include="000\030\031\" />
+    <Folder Include="000\030\032\" />
+    <Folder Include="000\030\033\" />
+    <Folder Include="000\030\034\" />
+    <Folder Include="000\030\035\" />
+    <Folder Include="000\030\036\" />
+    <Folder Include="000\030\037\" />
+    <Folder Include="000\030\038\" />
+    <Folder Include="000\030\039\" />
+    <Folder Include="000\040\040\" />
+    <Folder Include="000\040\041\" />
+    <Folder Include="000\040\042\" />
+    <Folder Include="000\040\043\" />
+    <Folder Include="000\040\044\" />
+    <Folder Include="000\040\045\" />
+    <Folder Include="000\040\046\" />
+    <Folder Include="000\040\047\" />
+    <Folder Include="000\040\048\" />
+    <Folder Include="000\040\049\" />
+    <Folder Include="000\050\050\" />
+    <Folder Include="000\050\051\" />
+    <Folder Include="000\050\052\" />
+    <Folder Include="000\050\053\" />
+    <Folder Include="000\050\054\" />
+    <Folder Include="000\050\055\" />
+    <Folder Include="000\050\056\" />
+    <Folder Include="000\050\057\" />
+    <Folder Include="000\050\058\" />
+    <Folder Include="000\050\059\" />
+    <Folder Include="000\060\060\" />
+    <Folder Include="000\060\061\" />
+    <Folder Include="000\060\062\" />
+    <Folder Include="000\060\063\" />
+    <Folder Include="000\060\064\" />
+    <Folder Include="000\060\065\" />
+    <Folder Include="000\060\066\" />
+    <Folder Include="000\060\067\" />
+    <Folder Include="000\060\068\" />
+    <Folder Include="000\060\069\" />
+    <Folder Include="000\070\070\" />
+    <Folder Include="000\070\071\" />
+    <Folder Include="000\070\072\" />
+    <Folder Include="000\070\073\" />
+    <Folder Include="000\070\074\" />
+    <Folder Include="000\070\075\" />
+    <Folder Include="000\070\076\" />
+    <Folder Include="000\070\077\" />
+    <Folder Include="000\070\078\" />
+    <Folder Include="000\070\079\" />
+    <Folder Include="000\080\080\" />
+    <Folder Include="000\080\081\" />
+    <Folder Include="000\080\082\" />
+    <Folder Include="000\080\083\" />
+    <Folder Include="000\080\084\" />
+    <Folder Include="000\080\085\" />
+    <Folder Include="000\080\086\" />
+    <Folder Include="000\080\087\" />
+    <Folder Include="000\080\088\" />
+    <Folder Include="000\080\089\" />
+    <Folder Include="000\090\090\" />
+    <Folder Include="000\090\091\" />
+    <Folder Include="000\090\092\" />
+    <Folder Include="000\090\093\" />
+    <Folder Include="000\090\094\" />
+    <Folder Include="000\090\095\" />
+    <Folder Include="000\090\096\" />
+    <Folder Include="000\090\097\" />
+    <Folder Include="000\090\098\" />
+    <Folder Include="000\090\099\" />
+    <Folder Include="100\100\100\" />
+    <Folder Include="100\100\101\" />
+    <Folder Include="100\100\102\" />
+    <Folder Include="100\100\103\" />
+    <Folder Include="100\100\104\" />
+    <Folder Include="100\100\105\" />
+    <Folder Include="100\100\106\" />
+    <Folder Include="100\100\107\" />
+    <Folder Include="100\100\108\" />
+    <Folder Include="100\100\109\" />
+    <Folder Include="100\110\110\" />
+    <Folder Include="100\110\111\" />
+    <Folder Include="100\110\112\" />
+    <Folder Include="100\110\113\" />
+    <Folder Include="100\110\114\" />
+    <Folder Include="100\110\115\" />
+    <Folder Include="100\110\116\" />
+    <Folder Include="100\110\117\" />
+    <Folder Include="100\110\118\" />
+    <Folder Include="100\110\119\" />
+    <Folder Include="100\120\120\" />
+    <Folder Include="100\120\121\" />
+    <Folder Include="100\120\122\" />
+    <Folder Include="100\120\123\" />
+    <Folder Include="100\120\124\" />
+    <Folder Include="100\120\125\" />
+    <Folder Include="100\120\126\" />
+    <Folder Include="100\120\127\" />
+    <Folder Include="100\120\128\" />
+    <Folder Include="100\120\129\" />
+    <Folder Include="100\130\130\" />
+    <Folder Include="100\130\131\" />
+    <Folder Include="100\130\132\" />
+    <Folder Include="100\130\133\" />
+    <Folder Include="100\130\134\" />
+    <Folder Include="100\130\135\" />
+    <Folder Include="100\130\136\" />
+    <Folder Include="100\130\137\" />
+    <Folder Include="100\130\138\" />
+    <Folder Include="100\130\139\" />
+    <Folder Include="100\140\140\" />
+    <Folder Include="100\140\141\" />
+    <Folder Include="100\140\142\" />
+    <Folder Include="100\140\143\" />
+    <Folder Include="100\140\144\" />
+    <Folder Include="100\140\145\" />
+    <Folder Include="100\140\146\" />
+    <Folder Include="100\140\147\" />
+    <Folder Include="100\140\148\" />
+    <Folder Include="100\140\149\" />
+    <Folder Include="100\150\150\" />
+    <Folder Include="100\150\151\" />
+    <Folder Include="100\150\152\" />
+    <Folder Include="100\150\153\" />
+    <Folder Include="100\150\154\" />
+    <Folder Include="100\150\155\" />
+    <Folder Include="100\150\156\" />
+    <Folder Include="100\150\157\" />
+    <Folder Include="100\150\158\" />
+    <Folder Include="100\150\159\" />
+    <Folder Include="100\160\160\" />
+    <Folder Include="100\160\161\" />
+    <Folder Include="100\160\162\" />
+    <Folder Include="100\160\163\" />
+    <Folder Include="100\160\164\" />
+    <Folder Include="100\160\165\" />
+    <Folder Include="100\160\166\" />
+    <Folder Include="100\160\167\" />
+    <Folder Include="100\160\168\" />
+    <Folder Include="100\160\169\" />
+    <Folder Include="100\170\170\" />
+    <Folder Include="100\170\171\" />
+    <Folder Include="100\170\172\" />
+    <Folder Include="100\170\173\" />
+    <Folder Include="100\170\174\" />
+    <Folder Include="100\170\175\" />
+    <Folder Include="100\170\176\" />
+    <Folder Include="100\170\177\" />
+    <Folder Include="100\170\178\" />
+    <Folder Include="100\170\179\" />
+    <Folder Include="100\180\180\" />
+    <Folder Include="100\180\181\" />
+    <Folder Include="100\180\182\" />
+    <Folder Include="100\180\183\" />
+    <Folder Include="100\180\184\" />
+    <Folder Include="100\180\185\" />
+    <Folder Include="100\180\186\" />
+    <Folder Include="100\180\187\" />
+    <Folder Include="100\180\188\" />
+    <Folder Include="100\180\189\" />
+    <Folder Include="100\190\190\" />
+    <Folder Include="100\190\191\" />
+    <Folder Include="100\190\192\" />
+    <Folder Include="100\190\193\" />
+    <Folder Include="100\190\194\" />
+    <Folder Include="100\190\195\" />
+    <Folder Include="100\190\196\" />
+    <Folder Include="100\190\197\" />
+    <Folder Include="100\190\198\" />
+    <Folder Include="100\190\199\" />
+    <Folder Include="200\200\200\" />
+    <Folder Include="200\200\201\" />
+    <Folder Include="200\200\202\" />
+    <Folder Include="200\200\203\" />
+    <Folder Include="200\200\204\" />
+    <Folder Include="200\200\205\" />
+    <Folder Include="200\200\206\" />
+    <Folder Include="200\200\207\" />
+    <Folder Include="200\200\208\" />
+    <Folder Include="200\200\209\" />
+    <Folder Include="200\210\210\" />
+    <Folder Include="200\210\211\" />
+    <Folder Include="200\210\212\" />
+    <Folder Include="200\210\213\" />
+    <Folder Include="200\210\214\" />
+    <Folder Include="200\210\215\" />
+    <Folder Include="200\210\216\" />
+    <Folder Include="200\210\217\" />
+    <Folder Include="200\210\218\" />
+    <Folder Include="200\210\219\" />
+    <Folder Include="200\220\220\" />
+    <Folder Include="200\220\221\" />
+    <Folder Include="200\220\222\" />
+    <Folder Include="200\220\223\" />
+    <Folder Include="200\220\224\" />
+    <Folder Include="200\220\225\" />
+    <Folder Include="200\220\226\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\StyleCop.MSBuild.4.7.49.1\build\StyleCop.MSBuild.Targets" Condition="Exists('..\packages\StyleCop.MSBuild.4.7.49.1\build\StyleCop.MSBuild.Targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
