--- a/Leetcode/LeetcodeTest/LeetcodeTest.csproj
+++ b/Leetcode/LeetcodeTest/LeetcodeTest.csproj
@@ -44,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="000\000\001\TwoSumTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -52,7 +52,6 @@
     <None Include="Settings.StyleCop" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="000\000\001\" />
     <Folder Include="000\000\002\" />
     <Folder Include="000\000\003\" />
     <Folder Include="000\000\004\" />
@@ -278,6 +277,12 @@
     <Folder Include="200\220\224\" />
     <Folder Include="200\220\225\" />
     <Folder Include="200\220\226\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Leetcode\Leetcode.csproj">
+      <Project>{397e17a6-7576-49d3-941a-af14c8d420e8}</Project>
+      <Name>Leetcode</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\StyleCop.MSBuild.4.7.49.1\build\StyleCop.MSBuild.Targets" Condition="Exists('..\packages\StyleCop.MSBuild.4.7.49.1\build\StyleCop.MSBuild.Targets')" />
