--- a/Leetcode/Leetcode/Leetcode.csproj
+++ b/Leetcode/Leetcode/Leetcode.csproj
@@ -42,15 +42,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="000\000\001\TwoSum.cs" />
+    <Compile Include="000\000\002\AddTwoNumbers.cs" />
+    <Compile Include="000\000\002\ListNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="000\000\001\TwoSum.docx" />
+    <None Include="000\000\002\AddTwoNumbers.docx" />
     <None Include="packages.config" />
     <None Include="Settings.StyleCop" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="000\000\002\" />
     <Folder Include="000\000\003\" />
     <Folder Include="000\000\004\" />
     <Folder Include="000\000\005\" />
