[ZigZagConversion] Added files.

--- a/Leetcode/Leetcode/Leetcode.csproj
+++ b/Leetcode/Leetcode/Leetcode.csproj
@@ -45,19 +45,20 @@
     <Compile Include="000\000\002\AddTwoNumbers.cs" />
     <Compile Include="000\000\002\ListNode.cs" />
     <Compile Include="000\000\003\LongestSubstringWithoutRepeatingCharacters.cs" />
+    <Compile Include="000\000\006\ZigZagConversion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="000\000\001\TwoSum.docx" />
     <None Include="000\000\002\AddTwoNumbers.docx" />
     <None Include="000\000\003\LongestSubstringWithoutRepeatingCharacters.docx" />
+    <None Include="000\000\006\ZigZagConversion.docx" />
     <None Include="packages.config" />
     <None Include="Settings.StyleCop" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="000\000\004\" />
     <Folder Include="000\000\005\" />
-    <Folder Include="000\000\006\" />
     <Folder Include="000\000\007\" />
     <Folder Include="000\000\008\" />
     <Folder Include="000\000\009\" />
