--- a/Leetcode/LeetcodeTest/LeetcodeTest.csproj
+++ b/Leetcode/LeetcodeTest/LeetcodeTest.csproj
@@ -47,6 +47,7 @@
     <Compile Include="000\000\001\TwoSumTest.cs" />
     <Compile Include="000\000\002\AddTwoNumbersTest.cs" />
     <Compile Include="000\000\003\LongestSubstringWithoutRepeatingCharactersTest.cs" />
+    <Compile Include="000\000\006\ZigZagConversionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -56,7 +57,6 @@
   <ItemGroup>
     <Folder Include="000\000\004\" />
     <Folder Include="000\000\005\" />
-    <Folder Include="000\000\006\" />
     <Folder Include="000\000\007\" />
     <Folder Include="000\000\008\" />
     <Folder Include="000\000\009\" />
