--- a/Leetcode/Leetcode/Leetcode.csproj
+++ b/Leetcode/Leetcode/Leetcode.csproj
@@ -47,6 +47,7 @@
     <Compile Include="000\000\003\LongestSubstringWithoutRepeatingCharacters.cs" />
     <Compile Include="000\000\006\ZigZagConversion.cs" />
     <Compile Include="000\000\007\ReverseInteger.cs" />
+    <Compile Include="000\000\009\PalindromeNumber.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -55,6 +56,7 @@
     <None Include="000\000\003\LongestSubstringWithoutRepeatingCharacters.docx" />
     <None Include="000\000\006\ZigZagConversion.docx" />
     <None Include="000\000\007\ReverseInteger.docx" />
+    <None Include="000\000\009\PalindromeNumber.docx" />
     <None Include="packages.config" />
     <None Include="Settings.StyleCop" />
   </ItemGroup>
@@ -62,7 +64,6 @@
     <Folder Include="000\000\004\" />
     <Folder Include="000\000\005\" />
     <Folder Include="000\000\008\" />
-    <Folder Include="000\000\009\" />
     <Folder Include="000\010\010\" />
     <Folder Include="000\010\011\" />
     <Folder Include="000\010\012\" />
