--- a/Leetcode/LeetcodeTest/LeetcodeTest.csproj
+++ b/Leetcode/LeetcodeTest/LeetcodeTest.csproj
@@ -50,6 +50,7 @@
     <Compile Include="000\000\006\ZigZagConversionTest.cs" />
     <Compile Include="000\000\007\ReverseIntegerTest.cs" />
     <Compile Include="000\000\009\PalindromeNumberTest.cs" />
+    <Compile Include="000\010\012\RomanToIntegerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -62,7 +63,6 @@
     <Folder Include="000\000\008\" />
     <Folder Include="000\010\010\" />
     <Folder Include="000\010\011\" />
-    <Folder Include="000\010\012\" />
     <Folder Include="000\010\013\" />
     <Folder Include="000\010\014\" />
     <Folder Include="000\010\015\" />
