[RemoveNthNodeFromEndOfList] Added files.

--- a/Leetcode/Leetcode/Leetcode.csproj
+++ b/Leetcode/Leetcode/Leetcode.csproj
@@ -49,6 +49,7 @@
     <Compile Include="000\000\007\ReverseInteger.cs" />
     <Compile Include="000\000\009\PalindromeNumber.cs" />
     <Compile Include="000\010\012\RomanToInteger.cs" />
+    <Compile Include="000\010\019\RemoveNthNodeFromEndOfList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -58,6 +59,7 @@
     <None Include="000\000\006\ZigZagConversion.docx" />
     <None Include="000\000\007\ReverseInteger.docx" />
     <None Include="000\000\009\PalindromeNumber.docx" />
+    <None Include="000\010\019\RemoveNthNodeFromEndOfList.docx" />
     <None Include="packages.config" />
     <None Include="Settings.StyleCop" />
   </ItemGroup>
@@ -73,7 +75,6 @@
     <Folder Include="000\010\016\" />
     <Folder Include="000\010\017\" />
     <Folder Include="000\010\018\" />
-    <Folder Include="000\010\019\" />
     <Folder Include="000\020\020\" />
     <Folder Include="000\020\021\" />
     <Folder Include="000\020\022\" />
