[RemoveDuplicatesFromSortedArray] Added files.

--- a/Leetcode/Leetcode/Leetcode.csproj
+++ b/Leetcode/Leetcode/Leetcode.csproj
@@ -51,6 +51,7 @@
     <Compile Include="000\010\012\RomanToInteger.cs" />
     <Compile Include="000\010\019\RemoveNthNodeFromEndOfList.cs" />
     <Compile Include="000\020\021\MergeTwoSortedLists.cs" />
+    <Compile Include="000\020\026\RemoveDuplicatesFromSortedArray.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -62,6 +63,7 @@
     <None Include="000\000\009\PalindromeNumber.docx" />
     <None Include="000\010\019\RemoveNthNodeFromEndOfList.docx" />
     <None Include="000\020\021\MergeTwoSortedLists.docx" />
+    <None Include="000\020\026\Remove Duplicates from Sorted Array.docx" />
     <None Include="packages.config" />
     <None Include="Settings.StyleCop" />
   </ItemGroup>
@@ -82,7 +84,6 @@
     <Folder Include="000\020\023\" />
     <Folder Include="000\020\024\" />
     <Folder Include="000\020\025\" />
-    <Folder Include="000\020\026\" />
     <Folder Include="000\020\027\" />
     <Folder Include="000\020\028\" />
     <Folder Include="000\020\029\" />
