--- a/Leetcode/Leetcode/Leetcode.csproj
+++ b/Leetcode/Leetcode/Leetcode.csproj
@@ -52,6 +52,7 @@
     <Compile Include="000\010\019\RemoveNthNodeFromEndOfList.cs" />
     <Compile Include="000\020\021\MergeTwoSortedLists.cs" />
     <Compile Include="000\020\026\RemoveDuplicatesFromSortedArray.cs" />
+    <Compile Include="000\050\050\Pow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -107,7 +108,6 @@
     <Folder Include="000\040\047\" />
     <Folder Include="000\040\048\" />
     <Folder Include="000\040\049\" />
-    <Folder Include="000\050\050\" />
     <Folder Include="000\050\051\" />
     <Folder Include="000\050\052\" />
     <Folder Include="000\050\053\" />
