[LengthOfLastWord] Added files.

--- a/Leetcode/Leetcode/Leetcode.csproj
+++ b/Leetcode/Leetcode/Leetcode.csproj
@@ -53,6 +53,7 @@
     <Compile Include="000\020\021\MergeTwoSortedLists.cs" />
     <Compile Include="000\020\026\RemoveDuplicatesFromSortedArray.cs" />
     <Compile Include="000\050\050\Pow.cs" />
+    <Compile Include="000\050\058\LengthOfLastWord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -65,6 +66,7 @@
     <None Include="000\010\019\RemoveNthNodeFromEndOfList.docx" />
     <None Include="000\020\021\MergeTwoSortedLists.docx" />
     <None Include="000\020\026\Remove Duplicates from Sorted Array.docx" />
+    <None Include="000\050\058\Length of Last Word.docx" />
     <None Include="packages.config" />
     <None Include="Settings.StyleCop" />
   </ItemGroup>
@@ -115,7 +117,6 @@
     <Folder Include="000\050\055\" />
     <Folder Include="000\050\056\" />
     <Folder Include="000\050\057\" />
-    <Folder Include="000\050\058\" />
     <Folder Include="000\050\059\" />
     <Folder Include="000\060\060\" />
     <Folder Include="000\060\061\" />
