--- a/Leetcode/Leetcode/Leetcode.csproj
+++ b/Leetcode/Leetcode/Leetcode.csproj
@@ -54,6 +54,7 @@
     <Compile Include="000\020\026\RemoveDuplicatesFromSortedArray.cs" />
     <Compile Include="000\050\050\Pow.cs" />
     <Compile Include="000\050\058\LengthOfLastWord.cs" />
+    <Compile Include="000\060\067\AddBinary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -125,7 +126,6 @@
     <Folder Include="000\060\064\" />
     <Folder Include="000\060\065\" />
     <Folder Include="000\060\066\" />
-    <Folder Include="000\060\067\" />
     <Folder Include="000\060\068\" />
     <Folder Include="000\060\069\" />
     <Folder Include="000\070\070\" />
